[package]
name = "wry-mobile"
version = "0.1.0"
authors = ["Yu-Wei Wu <wusyong9104@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "Source/lib.rs"

[[bin]]
name = "wry-mobile-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
mobile-entry-point = "0.1.0"
wry = { git = "https://github.com/tauri-apps/wry", branch = "next" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.9.0" }
log = { version = "0.4.11" }
ndk-glue = "0.2.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
simple_logger = { version = "1.11.0" }
